--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #ffcea3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -38,8 +38,9 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
+  margin: 0.9em; 
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.4em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -47,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #F2994A;
 }
 button:focus,
 button:focus-visible {
